--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <div class="row">
     <div class="col-1">
     </div>
-    <div class="col-6">
+    <div class="col-sm-12 col-6">
 
         <img src="product1.jpg" class="img-thumbnail">
 
     </div>
-    <div class="col-4">
+    <div class="col-sm-12 col-4">
 
         <font size=5><b>CHANEL N°5</b></font></br>
         N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。<br><br>
