--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
 <div class="container">
 <div class="row">
-    <div class="col-1">
+    <div class="col-sm-1">
     </div>
-    <div class="col-sm-12 col-6">
+    <div class="col-sm-6">
 
         <img src="product1.jpg" class="img-thumbnail">
 
     </div>
-    <div class="col-sm-12 col-4">
+    <div class="col-sm-4">
 
         <font size=5><b>CHANEL N°5</b></font></br>
         N°5，女性魅力的極致精髓。散發柔美澄透的乙醛花束香氣。經典傳奇香氛，蘊藏於極簡設計的獨特瓶身。<br><br>
@@ -27,7 +27,7 @@
         <font size=3><b>退換貨須知</b></font><br>
         依《消費者保護法》的規定，於全站購物皆享有商品到貨【七日猶豫期】（含例假日）之權益。若收到的商品有任何問題，可於猶豫期內申請退貨。<br>
     </div>
-    <div class="col-1">
+    <div class="col-sm-1">
     </div>
     <div class="col-1">
     </div>
