--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </div>
     <div class="col-sm-1">
     </div>
+</div>
+<div class="row">
     <div class="col-1">
     </div>
     <div class="col-6">
