--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="col-sm-1">
     </div>
 </div>
+</div>
+<div class="container">
 <div class="row">
     <div class="col-1">
     </div>
